WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106298
REGRESSION(
r137406
): Text inside an empty optgroup prevents subsequent options from appearing
https://bugs.webkit.org/show_bug.cgi?id=106298
Summary
REGRESSION(r137406): Text inside an empty optgroup prevents subsequent option...
Kent Tamura
Reported
2013-01-07 22:23:24 PST
http://code.google.com/p/chromium/issues/detail?id=166968
<select> <option>a</option> <optgroup label="b"> </optgroup> <option>c</option> </select> Option 'c' doesn't appear in the popup menu. If we remove space in the optgroup, The option 'c' appears. It seems this happens on all platforms. I confirmed with Apple Mac and Chromium Mac. I verified this was a regression by
http://trac.webkit.org/changeset/137406
webkit.org/b/104685
.
Attachments
Patch
(3.33 KB, patch)
2013-01-07 22:55 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-01-07 22:55:35 PST
Created
attachment 181650
[details]
Patch
Ryosuke Niwa
Comment 2
2013-01-07 23:04:02 PST
Comment on
attachment 181650
[details]
Patch Thanks for the fix.
Radar WebKit Bug Importer
Comment 3
2013-01-07 23:05:09 PST
<
rdar://problem/12971665
>
WebKit Review Bot
Comment 4
2013-01-07 23:50:42 PST
Comment on
attachment 181650
[details]
Patch Clearing flags on attachment: 181650 Committed
r139038
: <
http://trac.webkit.org/changeset/139038
>
WebKit Review Bot
Comment 5
2013-01-07 23:50:46 PST
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 6
2013-01-08 01:32:18 PST
***
Bug 106273
has been marked as a duplicate of this bug. ***
Elliott Sprehn
Comment 7
2013-01-08 01:39:21 PST
***
Bug 106293
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug