REGRESSION(r137406): Text inside an empty optgroup prevents subsequent options from appearing https://bugs.webkit.org/show_bug.cgi?id=106298

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/forms/select/select-empty-optgroup.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::recalcListItems):
Traverse to the first element within the 'current' only if it exists.

LayoutTests:

* fast/forms/select/select-empty-optgroup-expected.html: Added.
* fast/forms/select/select-empty-optgroup.html: Added.


Canonical link: https://commits.webkit.org/124497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139038 268f45cc-cd09-0410-ab3c-d52691b4dbfc